--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 baseurl: '/'
 permalink: pretty
-title: 'Jekyll Serif'
+title: 'UNSW Cryptocurrency and Blockchain Society'
 
 logo:
-  mobile: "images/logo/logo-mobile.svg"
+  mobile: "images/logo/Crypto_Logo_SVG.svg"
   mobile_height: "32px"
   mobile_width: "32px"
-  desktop: "images/logo/logo.svg"
-  desktop_height: "32px"
-  desktop_width: "120px"
+  desktop: "images/logo/Crypto_Logo_SVG.svg"
+  desktop_height: "90px"
+  desktop_width: "150px"
 
 collections:
   services:
